--- a/ReciPic/package.json
+++ b/ReciPic/package.json
@@ -14,7 +14,9 @@
     "@use-expo/font": "^2.0.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-cli": "^4.4.3",
     "expo-status-bar": "~1.0.3",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
